# JobScout

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.yaml  email_report.py  embed.py  http_client.py  locations.py  logs.py  matching.yaml  pyproject.toml  rationale.py  requirements.txt  resume.txt.example  resume_loader.py  run.py  score.py  setup.py  store.py  tray.py
scheduler/: README.md  com.jobscout.plist  run.bat  run.sh
sources/: __init__.py  adzuna.py  base.py  jobspy_source.py  jooble.py  serpapi_google.py
templates/: base.html  dashboard.html  settings.html  setup.html
tests/: conftest.py  test_score.py  test_sources_base.py  test_store.py
